2006-04-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/eeprom.h: Use __asm__ in place of asm.
	Closes bug #16441: eeprom.h should use __asm__.

2006-04-22 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the ATmega165P/169P support.
	* devtools/gen-avr-lib-tree.sh: Add support for ATmega165P/169P.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iom165p.h: New file.
	* include/avr/iom169p.h: New file.
	* include/avr/Makefile.am: Include new files.
	* doc/api/main_page.dox: Document support for ATmega165P/169P.
	* doc/api/using-tools.dox: (Ditto.)
	
2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by lx_b@gmx.at:
	* include/avr/interrupt.h: improve C++ robustness of
	ISR declarations.
	Closes savannah bug #15732.

2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Glenn Maynard <glenn@zewt.org>:
	* include/util/crc16.h (_crc16_update): add equivalent C
	implementation as documentation.
	Closes savannah bug #16260.

2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/iocompat.h: Rename ATmega164/324 to
	ATmega164P/324P, add support for ATmega644P.
	* doc/examples/demo/Makefile: (Ditto.)

2006-04-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/iocompat.h: Add support for ATmega640/1280/1281.
	* doc/examples/demo/Makefile: (Ditto.)

2006-04-13 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h(SPMEN, SELFPRGEN): Add.

2006-04-01 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the ATmega644P support. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* devtools/gen-avr-lib-tree.sh: Add support for ATmega644P. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* doc/api/main_page.dox: Document support for ATmega644P. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* doc/api/using-tools.dox: (Ditto.)
	
2006-03-24 Anatoly Sokolov <aesok@post.ru>
